# trainy

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  dependencies.py  main.py
app/api/: __init__.py
app/api/schemas/: __init__.py  activities.py  analytics.py  calendar.py  coaching.py  common.py  metrics.py  planned_workouts.py  profile.py  wellness.py
app/api/v1/: __init__.py  activities.py  adherence.py  analytics.py  calendar.py  coaching.py  data.py  import_.py  metrics.py  planned_workouts.py  profile.py  wellness.py
docs/plans/: 2026-01-25-rowing-prs-design.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx
frontend/src/api/: activities.ts  analytics.ts  calendar.ts  client.ts  data.ts  import.ts  metrics.ts  planning.ts  profile.ts  wellness.ts
frontend/src/hooks/: useActivities.ts  useAnalytics.ts  useCalendar.ts  useCoachingChat.ts  useConversationalPlanning.ts  useDangerZone.ts  useImport.ts  useMetrics.ts  usePlanning.ts  useProfile.ts  useProjection.ts  useRecalculate.ts  useWellness.ts
frontend/src/lib/: projection.ts  utils.ts
scripts/: import_activities.py
trainy/: __init__.py  adherence.py  config.py
trainy/ai/: __init__.py  coaching.py  openrouter.py  tools.py
trainy/database/: __init__.py  migrations.py  models.py  repository.py
trainy/importers/: __init__.py  fit_importer.py
trainy/metrics/: __init__.py  calories.py  critical_power.py  efficiency.py  planned_tss.py  training_load.py  tss.py
(+45 files in other folders)
